Junit test implemented